troubleshooting img height issue displaying on mobile devices but not on devtools mobile view

--- a/src/components/pages/projects/styles.scss
+++ b/src/components/pages/projects/styles.scss
@@ -86,7 +86,7 @@
 }
 
 .project-item-img-thumb {
-    height: auto;
+    // height: auto;
     max-width: 500px;
     margin: auto 50px;
     
